<resources>
    <string name="accessibility_add_attendee">Add participants</string>
    <string name="accessibility_add_reminder">Add reminder</string>
    <string name="accessibility_all_day">All day</string>
    <string name="accessibility_pick_end_date">End date</string>
    <string name="accessibility_pick_end_time">End time</string>
    <string name="accessibility_pick_start_date">Start date</string>
    <string name="accessibility_pick_start_time">Start time</string>
    <string name="accessibility_pick_time_zone">Timezone</string>
    <string name="accessibility_reminder_privacy">Privacy settings</string>
    <string name="accessibility_reminder_showmeas">Show me as</string>
    <string name="accessibility_reminder_time">Reminder time</string>
    <string name="accessibility_reminder_type">Reminder type</string>
    <string name="accessibility_remove_attendee">Remove attendee</string>
    <string name="accessibility_remove_reminder">Remove reminder</string>
    <string name="accessibility_repeats">Repeat</string>
    <string name="accessibility_sync_cal">Sync calendar</string>
    <string name="accounts">Accounts &amp; Sync</string>
    <string name="acct_not_synced">Your calendars might not be the latest because the account has not been synchronized.</string>
    <string name="acessibility_cal_notification">Calendar Notification</string>
    <string name="acessibility_selected_marker_description">Selected events</string>
    <string name="acessibility_snooze_notification">Snooze Notification</string>
    <string name="add_account">Add account</string>
    <string name="agenda_today">Today %1$s</string>
    <string name="agenda_tomorrow">Tomorrow %1$s</string>
    <string name="agenda_view">Calendar</string>
    <string name="agenda_yesterday">Yesterday %1$s</string>
    <string name="alert_title">Calendar reminders</string>
    <string name="app_label">Calendar</string>
    <string name="attendees_label">Recipient</string>
    <string name="calendar_refresh">Refresh</string>
    <string name="change_response_title">Change reply</string>
    <string name="copy_db">Send database</string>
    <string name="create_an_account_desc">Calendar works better with a Google Account. Get access to Calendar through any web browser and back up your events safely.</string>
    <string name="creating_event">Event created.</string>
    <string name="creating_event_with_guest">Invitations will be sent.</string>
    <string name="custom">"Custom (can't customize on tablet PC)"</string>
    <string name="daily">Daily</string>
    <string name="date_time_fmt" formatted="false">%s %s</string>
    <string name="day_view">Day</string>
    <string name="day_view_new_event_hint">+ New event</string>
    <string name="delete_label">Delete</string>
    <string name="delete_recurring_event_title">Delete %s?</string>
    <string name="delete_this_event_title">Delete this event?</string>
    <string name="description_label">Descriptions</string>
    <string name="directory_searching_fmt">Searching %s…</string>
    <string name="discard_label">Cancel</string>
    <string name="dismiss_all_label">I know</string>
    <string name="do_not_check">Do not select -></string>
    <string name="does_not_repeat">One-time event</string>
    <string name="edit_event_all_day_label">All day</string>
    <string name="edit_event_calendar_label">Calendar</string>
    <string name="edit_event_from_label">Start  </string>
    <string name="edit_event_label">Details</string>
    <string name="edit_event_show_all">Show all</string>
    <string name="edit_event_to_label">End</string>
    <string name="edit_label">Edit</string>
    <string name="email_guests_label">Send an Email to guests</string>
    <string name="email_picker_label">Use when sending an Email</string>
    <string name="empty_event">Unable to create an empty event.</string>
    <string name="event_create">New event</string>
    <string name="event_delete">Delete event</string>
    <string name="event_edit">Edit event</string>
    <string name="event_info_organizer">Organizer:</string>
    <string name="event_info_reminders_label">Reminders</string>
    <string name="event_info_title">View event</string>
    <string name="event_info_title_invite">Meeting invitation</string>
    <string name="event_view">View event</string>
    <string name="every_weekday">Every weekday (Mon–Fri)</string>
    <string name="gadget_no_events">No upcoming calendar events</string>
    <string name="gadget_title">Calendar</string>
    <string name="goto_today">Today</string>
    <string name="hide_controls">Hide controls</string>
    <string name="hint_attendees">Guests(Email)</string>
    <string name="hint_description">Remarks</string>
    <string name="hint_what">Event name</string>
    <string name="hint_where">Location</string>
    <string name="loading">Loading...</string>
    <string name="menu_about_preferences">About Calendar</string>
    <string name="menu_general_preferences">General settings</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_select_visible_calendars">Calendars to display</string>
    <string name="modify_all">Modify all repeated activities</string>
    <string name="modify_all_following">Modify this event and all future events</string>
    <string name="modify_event">Modify this event only</string>
    <string name="month_view">Month</string>
    <string name="monthly">Monthly</string>
    <string name="monthly_on_day">Monthly (%s)</string>
    <string name="monthly_on_day_count">Monthly (every %1$s%2$s)</string>
    <string name="new_event_dialog_label">New event</string>
    <string name="new_event_dialog_option">New event</string>
    <string name="no_calendars_found">Before adding an event, you must add at least one Calendar account to your device and display one calendar. Touch Add Account to add an account (if you just added an account, wait for the account to be synchronized and try again). You can also touch Cancel and make sure to display at least one calendar.</string>
    <string name="no_syncable_calendars">No calendars</string>
    <string name="no_title_label">(No title)</string>
    <string name="not_synced">Unsynchronized</string>
    <string name="prefDialogTitle_vibrateWhen">Vibrate</string>
    <string name="preferences_about_title">About</string>
    <string name="preferences_alerts_popup_title">Pop-up notification</string>
    <string name="preferences_alerts_ringtone_title">Choose ringtone</string>
    <string name="preferences_alerts_title">Notifications</string>
    <string name="preferences_alerts_vibrateWhen_title">Vibrate</string>
    <string name="preferences_build_version">Version</string>
    <string name="preferences_clear_search_history_summary">Delete all searches</string>
    <string name="preferences_clear_search_history_title">Clear search history</string>
    <string name="preferences_default_reminder_default">15</string>
    <string name="preferences_default_reminder_dialog">Default reminder time</string>
    <string name="preferences_default_reminder_title">Default reminder time</string>
    <string name="preferences_general_title">Calendar view settings</string>
    <string name="preferences_hide_declined_title">Hide declined events</string>
    <string name="preferences_home_tz_title">Home timezone</string>
    <string name="preferences_reminder_title">Reminder settings</string>
    <string name="preferences_show_week_num_title">Show week number</string>
    <string name="preferences_title">Settings</string>
    <string name="preferences_use_home_tz_descrip">Select home timezone</string>
    <string name="preferences_use_home_tz_title">Select home timezone</string>
    <string name="preferences_week_start_day_dialog">Week starts on</string>
    <string name="preferences_week_start_day_title">Week starts on</string>
    <string name="presence_label">Show me as</string>
    <string name="privacy_label">Privacy</string>
    <string name="quick_response_custom_msg">Write an Email</string>
    <string name="quick_response_dialog_title">Select quick reply</string>
    <string name="quick_response_email_failed">Email app not found</string>
    <string name="quick_response_settings">Quick reply</string>
    <string name="quick_response_settings_edit_title">Quick reply</string>
    <string name="quick_response_settings_summary">Edit the default reply when sending an Email to participants</string>
    <string name="quick_response_settings_title">Edit quick reply</string>
    <string name="reminders_label">Add reminder</string>
    <string name="repeats_label">Repeat</string>
    <string name="response_maybe">Maybe</string>
    <string name="response_no">No</string>
    <string name="response_yes">Yes</string>
    <string name="save_label">Done</string>
    <string name="saving_event">Event saved.</string>
    <string name="saving_event_with_guest">Updates will be sent.</string>
    <string name="search">Search</string>
    <string name="search_history_cleared">Search history cleared.</string>
    <string name="select_visible_calendars_title">Accounts and calendars to display</string>
    <string name="week_view">Week</string>
    <string name="ALARM_REMINDER">Alarm reminder</string>
    <string name="NOTIFICATION_REMINDER">Notification reminder</string>
    <string name="NO_REMINDER">Do not remind</string>
    <string name="POPUP_REMINDER">Pop-up reminder</string>
    <string name="calendar_settings_accounts_title">Accounts and Calendar</string>
    <string name="calendar_settings_general_setup_title">General settings</string>
    <string name="cta_header">Welcome to use Calendar. In order to provide you with better service, the following permissions are required during use:</string>
    <string name="cta_list_1">•  Networking: This permission is required to synchronize statutory holidays and self-upgrade.</string>
    <string name="cta_list_2">•  Calendar: This permission is required to read calendar, create, delete, modify, etc.</string>
    <string name="cta_list_3">•  Phone, storage: This permission needs to be obtained when the calendar is backing up data or upgrading.</string>
    <string name="cta_list_4">•  Contacts: The calendar needs to obtain event information under the account, and this permission needs to be obtained.</string>
    <string name="cta_text">Clicking Agree means that you agree to the above content and <a href="https://account.nubia.com/res/html/calendar_privacy.html">Calendar privacy policy</a>.</string>
    <string name="menu_add">Add</string>
    <string name="menu_more">More</string>
    <string name="menu_today">Today</string>
    <string name="preferences_alerts_vibrate_title">Vibrate</string>
    <string name="preferences_default_pop_window_title">Alarm reminder</string>
    <string name="preferences_default_reminder_radiobutton1">Do not remind</string>
    <string name="preferences_default_reminder_radiobutton2">0 minutes</string>
    <string name="preferences_default_reminder_radiobutton3">5 minutes</string>
    <string name="preferences_default_reminder_radiobutton4">10 minutes</string>
    <string name="preferences_default_reminder_radiobutton5">15 minutes</string>
    <string name="preferences_default_reminder_radiobutton6">30 minutes</string>
    <string name="preferences_default_reminder_radiobutton7">1 hour</string>
    <string name="preferences_default_reminder_radiobutton8">1 day</string>
    <string name="preferences_default_reminder_radiobutton9">1 week</string>
    <string name="preferences_sportsevents_pop_window_title">Sports Event</string>
    <string name="preferences_weather_pop_window_title">Show weather</string>
    <string name="reminder_shared_phone">Recipient</string>
    <string name="time_zone_settings">Timezone settings</string>
    <string name="year_view">Year</string>
    <string name="prefDefault_alerts_vibrateWhen">never</string>
    <string name="preferences_home_tz_default">Asia/Shanghai</string>
</resources>