<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/reminder_minutes_parent1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/list_item_min_height">
        <TextView android:textSize="@dimen/nubia_text_size_small" android:textColor="@color/summary_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/event_info_reminders_label" />
        <TextView android:textSize="@dimen/nubia_text_size_medium" android:textColor="@color/text_color_white_all" android:id="@id/reminder_minutes_value1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/Padding_Event" android:elegantTextHeight="true" />
        <LinearLayout android:gravity="right" android:layout_gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageButton android:layout_gravity="center_vertical" android:id="@id/reminder_remove1" android:background="@drawable/item_right" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/reminder_minutes_parent" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Spinner android:gravity="center|right" android:entries="@array/reminder_minutes_labels" android:id="@id/reminder_minutes_value" android:background="@null" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="30.0dip" android:contentDescription="@string/accessibility_reminder_time" />
        <Spinner android:gravity="start|center|top" android:entries="@array/reminder_methods_labels" android:id="@id/reminder_method_value" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:contentDescription="@string/accessibility_reminder_type" android:layout_marginEnd="@dimen/edit_event_reminder_minutes_value1_margin_right" style="@style/TextAppearance.EditEvent_Value" />
        <ImageButton android:gravity="center_vertical" android:layout_gravity="end|center" android:id="@id/reminder_remove" android:visibility="gone" android:layout_width="@dimen/edit_event_reminder_remove_width" android:layout_height="@dimen/edit_event_reminder_remove_width" android:layout_weight="0.0" android:contentDescription="@string/accessibility_remove_reminder" android:layout_marginEnd="0.0dip" style="@style/MinusButton" />
    </FrameLayout>
    <LinearLayout android:id="@id/reminder_shared_phone_label" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="111.0dip">
        <TextView android:layout_gravity="bottom" android:id="@id/reminder_shared_phone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/edit_event_reminder_shared_phone_margin_bottom" android:text="@string/reminder_shared_phone" style="@style/TextAppearance.EditEvent_Value1" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/add_reminder_phone_row" android:paddingRight="@dimen/edit_event_when_from_padding_right" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/edit_event_when_from_height" android:paddingStart="@dimen/edit_event_when_from_padding_left">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageButton android:layout_gravity="end|center" android:id="@id/add_reminder_phone_btn" android:paddingRight="0.0dip" android:layout_width="@dimen/edit_event_reminder_remove_width" android:layout_height="@dimen/edit_event_reminder_remove_width" android:layout_weight="0.0" style="@style/AddButton" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>