<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/actionbar_menu" />
    <LinearLayout android:orientation="vertical" android:id="@id/root" android:paddingTop="50.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:textSize="12.0sp" android:gravity="end|center" android:id="@id/home_time" android:paddingRight="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="16.0dip" />
            <FrameLayout android:id="@id/main_pane" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="2.0" />
            <FrameLayout android:id="@id/secondary_pane" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        </LinearLayout>
        <View android:id="@id/mini_month_container" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="0.0dip" />
        <FrameLayout android:id="@id/mini_month" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="0.0dip" />
        <FrameLayout android:id="@id/calendar_list" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="0.0dip" />
        <LinearLayout android:gravity="center" android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/bottom_bar" android:background="@color/bottom_bar_bg" android:layout_width="fill_parent" android:layout_height="@dimen/bottom_button_height">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/Atoday_menu_land" android:layout_width="@dimen/bottom_button_parent_width" android:layout_height="fill_parent">
                <TextView android:textSize="17.0dip" android:textColor="@color/nubia_action_menu_item_text_material_light" android:id="@id/Atoday_menu_display" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" />
                <TextView android:textSize="@dimen/nubia_text_size_extrasmall" android:textColor="@color/nubia_action_menu_item_text_material_light" android:id="@id/Atoday_menu_display_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/bottom_bar_drawable_padding" android:text="@string/menu_today" android:maxLines="1" />
            </LinearLayout>
            <TextView android:textSize="@dimen/nubia_text_size_extrasmall" android:textColor="@color/nubia_action_menu_item_text_material_light" android:gravity="center" android:id="@id/Aadd_menu" android:layout_width="@dimen/bottom_button_parent_width" android:layout_height="wrap_content" android:text="@string/menu_add" android:maxLines="1" android:drawableTop="@drawable/menu_new" android:drawablePadding="@dimen/bottom_bar_drawable_padding" />
            <TextView android:textSize="@dimen/nubia_text_size_extrasmall" android:textColor="@color/nubia_action_menu_item_text_material_light" android:gravity="center" android:id="@id/Amore_menu" android:layout_width="@dimen/bottom_button_parent_width" android:layout_height="wrap_content" android:text="@string/menu_more" android:maxLines="1" android:drawableTop="@drawable/menu_more" android:drawablePadding="@dimen/bottom_bar_drawable_padding" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>